--- a/order-dev.yml
+++ b/order-dev.yml
@@ -1,5 +1,5 @@
 env:
-  dev999
+  dev
 spring:
   application:
     name: order
@@ -16,5 +16,5 @@ PRODUCT:
   Ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.BestAvailableRule
 boy:
-  name: jack
-  age: 18
+  name: kolo
+  age: 100
