--- a/order-dev.yml
+++ b/order-dev.yml
@@ -16,5 +16,5 @@ PRODUCT:
   Ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.BestAvailableRule
 boy:
-  name: tutu
-  age: 18
+  name: jack
+  age: 22
