--- a/order-dev.yml
+++ b/order-dev.yml
@@ -16,5 +16,5 @@ PRODUCT:
   Ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.BestAvailableRule
 boy:
-  name: jack
-  age: 22
+  name: kolo
+  age: 25
