--- a/order-dev.yml
+++ b/order-dev.yml
@@ -1,5 +1,5 @@
 env:
-  dev
+  dev111
 spring:
   application:
     name: order
@@ -16,5 +16,5 @@ PRODUCT:
   Ribbon:
     NFLoadBalancerRuleClassName: com.netflix.loadbalancer.BestAvailableRule
 boy:
-  name: kolo
-  age: 18
+  name: kolo111
+  age: 18111
