--- a/order-dev.yml
+++ b/order-dev.yml
@@ -1,6 +1,11 @@
 env:
   dev
 spring:
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
   application:
     name: order
   datasource:
