--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -1,2 +1,8 @@
 server:
   port: 8083
+zuul:
+  routes:             #设置服务节点的匹配规则
+    productRule:
+      path: /product/**
+      serviceId: product
+  sensitive-headers:
