--- a/user-dev.yml
+++ b/user-dev.yml
@@ -1,2 +1,8 @@
 server:
   port: 8006
+spring.
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: root
+    password: 123456
+    url: jdbc:mysql://127.0.0.1:3306/SpringCloud_Sell?characterEncoding=utf-8&useSSL=false
