--- a/api-gateway-dev.yml
+++ b/api-gateway-dev.yml
@@ -4,5 +4,8 @@ zuul:
     productRule:
       path: /product/**
       serviceId: product
+    orderRule:
+      path: /order/**
+      serviceId: order
 server:
   port: 8083
